# inbox-ai

./: .env.example  .gitignore  LICENSE  README.md  clear_calendar_tokens.py  package-lock.json  package.json  pyproject.toml
src/inbox_ai/: __about__.py  __init__.py  cli.py
src/inbox_ai/calendar/: __init__.py  google_calendar_client.py
src/inbox_ai/core/: __init__.py  config.py  container.py  datetime_utils.py  interfaces.py  logging.py  models.py
src/inbox_ai/ingestion/: __init__.py  fetcher.py  optimized_fetcher.py  parser.py
src/inbox_ai/intelligence/: __init__.py  category.py  drafter.py  email_analysis_service.py  fallback.py  follow_up.py  llm.py  priority.py  prompts.py  summarizer.py
src/inbox_ai/storage/: __init__.py  connection_pool.py  sqlite.py
src/inbox_ai/storage/schema/: 001_init.sql  002_intelligence.sql  003_followups.sql  004_categories.sql  005_mailbox.sql  006_content_hash.sql  007_performance_indexes.sql  008_user_preferences.sql  009_sent_drafts.sql  010_calendar_sync.sql
src/inbox_ai/transport/: __init__.py  imap_client.py  smtp_client.py
src/inbox_ai/web/: __init__.py  app.py  cache.py  security.py
src/inbox_ai/web/static/config/: themes.json
src/inbox_ai/web/static/css/: style.css
src/inbox_ai/web/static/frontend/: README.md  package-lock.json  package.json
src/inbox_ai/web/static/frontend/src/: material.js
src/inbox_ai/web/static/js/: calendar.js  compose.js  dashboard.js  navigation.js  register-sw.js  service-worker.js  tabs.js
src/inbox_ai/web/templates/: index.html  settings.html
src/inbox_ai/web/templates/partials/: header.html
tests/: __init__.py  test_config.py  test_drafter.py  test_follow_up_planner.py  test_imap_client.py  test_logging.py  test_mail_fetcher.py  test_parser.py  test_sqlite_repository.py  test_summarizer.py  test_web_app.py
tests/fixtures/: sample_email.eml
(+7 files in other folders)
