[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-ai"
version = "0.1.0"
description = "Local email assistant with modular architecture for LLM-driven workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LiteObject" }]
license = { text = "Proprietary" }
keywords = ["gmail", "llm", "productivity", "inbox"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pylint>=3.2",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
packages = ["inbox_ai"]

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.pylint.MASTER]
py-version = "3.11"
ignore = [".venv", "build", "dist"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "too-few-public-methods",
]

[tool.pylint."BASIC"]
good-names = ["_", "i", "j", "k", "n", "id"]

[tool.pylint."FORMAT"]
max-line-length = 100

[tool.coverage.run]
branch = true
source = ["inbox_ai"]
